--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,38 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  font-size: 14px;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  @apply bg-slate-100;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#__next {
+  @apply mx-auto min-h-screen max-w-[600px] bg-white;
 }
 
-* {
-  box-sizing: border-box;
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-xl;
+  }
+
+  h3 {
+    @apply text-lg;
+  }
+
+  .scrollbar-hide {
+    scrollbar-width: none;
+    &&::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+      background: transparent;
+    }
+  }
 }
