--- a/styles/components.css
+++ b/styles/components.css
@@ -1,3 +1,12 @@
+@keyframes cart-increase {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 @layer components {
   .discount-badge {
     @apply bg-red-500 text-white rounded-md py-[2px] px-1;
@@ -9,5 +18,14 @@
 
   .delivery {
     @apply inline-block px-[3px] bg-green-200 text-green-700 font-medium rounded-md;
+  }
+
+  .cart-count {
+    @apply absolute -top-1/3 -right-1/2 min-w-[20px] px-1 py-[1px] bg-red-500 text-center text-white text-sm tabular-nums rounded;
+
+    &.increase {
+      transform-origin: 0% 100%;
+      animation: cart-increase 300ms ease-out;
+    }
   }
 }
