--- a/styles/components.css
+++ b/styles/components.css
@@ -1,9 +1,9 @@
 @keyframes cart-increase {
   0% {
-    transform: scale(0);
+    transform: scale(0) rotate(-60deg);
   }
   100% {
-    transform: scale(1);
+    transform: scale(1) rotate(0deg);
   }
 }
 
@@ -21,11 +21,11 @@
   }
 
   .cart-count {
-    @apply absolute -top-1/3 -right-1/2 min-w-[20px] px-1 py-[1px] bg-red-500 text-center text-white text-sm tabular-nums rounded;
+    @apply absolute -top-1/4 -right-[40%] min-w-[20px] px-1 py-[1px] bg-red-500 text-center text-white text-sm tabular-nums rounded;
 
     &.increase {
       transform-origin: 0% 100%;
-      animation: cart-increase 300ms ease-out;
+      animation: cart-increase 350ms cubic-bezier(0.2, 1.4, 1, 1.2);
     }
   }
 }
