--- a/styles/components.css
+++ b/styles/components.css
@@ -42,7 +42,7 @@
   }
 
   .btn-love {
-    @apply font-semibold uppercase;
+    @apply rounded-lg cursor-default md:cursor-pointer;
     animation: love-pop 0.25s ease-out;
     &:active:hover,
     &:active:focus {
@@ -51,6 +51,33 @@
     &:active:hover,
     &:active:focus {
       transform: scale(0.9);
+    }
+
+    svg {
+      @apply will-change-transform transition-all;
+      &:nth-child(1) {
+        transform: scale(0.3);
+        opacity: 0;
+      }
+      &:nth-child(2) {
+        @apply stroke-2;
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    &.active {
+      svg {
+        &:nth-child(1) {
+          transform: scale(1);
+          opacity: 1;
+        }
+        &:nth-child(2) {
+          @apply stroke-0;
+          transform: scale(0.8);
+          opacity: 0;
+        }
+      }
     }
   }
 }
